--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-     "dev": "nodemon --watch src --exec \"node src/server.js\""
+    "dev": "nodemon --watch src --exec \"node src/server.js\""
   },
   "keywords": [],
   "author": "",
@@ -14,9 +14,13 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.888.0",
     "@aws-sdk/lib-dynamodb": "^3.888.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "nanoid": "^5.1.5"
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1",
+    "nanoid": "^5.1.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
