--- a/zapurl-backend/package.json
+++ b/zapurl-backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.13",
+    "@arcjet/node": "^1.0.0-beta.13",
     "@aws-sdk/client-dynamodb": "^3.888.0",
     "@aws-sdk/lib-dynamodb": "^3.888.0",
     "cors": "^2.8.5",
@@ -20,6 +22,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "nanoid": "^5.1.5",
+    "redis": "^5.9.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
