add dockerfile and build image for frontend

--- a/zapurl-backend/package.json
+++ b/zapurl-backend/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon --watch src --exec \"node src/server.js\""
+    "dev": "nodemon --watch src --exec \"node src/server.js\"",
+    "lambda:offline": "serverless offline",
+    "lambda:deploy": "serverless deploy",
+    "lambda:deploy:prod": "serverless deploy --stage prod",
+    "lambda:logs": "serverless logs -f api -t"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +27,12 @@
     "morgan": "^1.10.1",
     "nanoid": "^5.1.5",
     "redis": "^5.9.0",
+    "serverless-http": "^4.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "serverless": "^4.22.0",
+    "serverless-offline": "^14.4.0"
   }
 }
